# Fast-api

FastAPI/introdução/: aula.py  pyproject.toml
FastAPI/project1/: Untitled-1.json  converter.py  pyproject.toml  routers.py  schemas.py
FastAPI/project2/: Dockerfile  docker-compose.yml  pyproject.toml
FastAPI/project2/app/db/: models.py
FastAPI/project2/app/migrations/versions/: 7a5f78f282b7_add_categories_table.py  fecdae92bb02_add_products_table.py
FastAPI/project2/app/schemas/: base.py  category.py  product.py
FastAPI/project2/app/test/: conftest.py
FastAPI/project2/app/test/routes/: test_category_routes.py
FastAPI/project2/app/test/schemas/: test_category_schema.py  test_product_schema.py
FastAPI/project2/app/test/use_cases/: test_category_use_cases.py
FastAPI/project2/app/use_cases/: category.py
