[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["gustavo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.5"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
