[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["gustavo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
alembic = "^1.13.2"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
